Beta v3 with cmake,also added a CLI

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "files.associations": {
-        "ostream": "cpp",
-        "iostream": "cpp"
-    },
-    "cmake.sourceDirectory": "${workspaceFolder}/MEnu_VErsions/Menu"
+    "cmake.sourceDirectory": "${workspaceFolder}/Menu"
 }
