--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.sourceDirectory": "${workspaceFolder}/Menu",
     "cmake.configureOnOpen": true,
     "files.associations": {
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "string": "cpp"
     }
 }
