--- a/Menu/CMakelists.txt
+++ b/Menu/CMakelists.txt
@@ -4,6 +4,6 @@ project(Menu_Beta VERSION 0.4.0)
 add_subdirectory(ChangeTheJ)
 add_subdirectory(Fibonum)
 add_subdirectory(Menu_exe)
-add_subdirectory(RockGame)
+add_subdirectory(Game_Menu)
 
 
