--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,6 +45,10 @@
         "sstream": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "compare": "cpp",
+        "concepts": "cpp",
+        "ranges": "cpp",
+        "cinttypes": "cpp"
     }
 }
